Some layout bugs are fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,11 @@
 }
 body {
     background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(206,206,206,1) 100%);
+    margin: 0;
 }
 .content {
-    margin-right: 5%;
-    margin-left: 5%;
+    margin-right: 70px;
+    margin-left: 70px;
 }
 
 .navbar {
@@ -62,9 +63,9 @@ body {
     border-radius: 0px 0px 0px 30px;
 }
 .panelChildren {
-    padding-bottom: 3%;
-    padding-right: 2%;
-    padding-left: 2%;
+    padding-bottom: 30px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 .lightPanel {
     background-color: #FFFFFF;
@@ -79,23 +80,37 @@ body {
     background-color: #575757;
     color: #FFFFFF;
 }
-.panelHeader {
+
+.panelHeaderContent {
     display: flex;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
+    padding-top: 90px;
+    margin-bottom: 60px;
+}
+.panelHeader {
+    /* display: flex;
+    align-items: center;
+    flex-direction: column; */
  }
 
-.topArtefact {
-    margin-top: 40px;
-    margin-left: auto; 
+ .artefacts {
+    position: relative;
+ }
+ .topArtefact {
+    position: absolute;
+    right: 0px;
+    top: 40px;
     width: 100px;
     height: 40px;
     background: #FC8C45;
     border-radius: 50px 0px 0px 50px;
 }
 .bottomArtefact {
-    width: calc(100% - (94% + 0px));
-    margin-left: calc(100% + (100% - (94% + 0px)));
+    position: absolute;
+    top: 50px;
+    right: -70px;
+    width: 70px;
     margin-bottom: 40px;
     height: 40px;
     background-color: #D97B40;
@@ -223,16 +238,17 @@ body {
 }
 
 .guideLine {
-    width: 100%;
-    display: flex;
+    top: 170px;
+    position: relative;
     min-width: 1217px;
-    justify-content: space-between;
 }
 .LeftCursorIcon {
+    position: absolute;
     width: 50px;
-    margin-left: -22px;
+    left: -23px;
 }
 .RightCursorIcon {
+    position: absolute;
     width: 50px;
-    margin-right: -22px;
+    right: -23px;
 }
